# voicerecognition

./: CMakeLists.txt  README.md  alsasoundcard.cpp  alsasoundcard.h  cnt  continuous.c  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  mydict.dic  mylm.lm  pcro.pro  qcustomplot.cpp  qcustomplot.h  ui_mainwindow.h  voicerecognition.cpp  voicerecognition.h
